stages/stage7/k8s/apps/notification/notification-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification
  namespace: apollo11-apps
spec:
  type: ClusterIP
  selector:
    app: notification
  ports:
    - port: 8084
      targetPort: 8084
