stages/stage7/k8s/apps/notification/notification-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: notification-allow-specific
  namespace: apollo11-apps
spec:
  podSelector:
    matchLabels:
      app: notification
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: apollo11-ui
            podSelector:
              matchLabels:
                app: frontend
